<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/black_transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/who"/>

        <TextView
            android:id="@+id/who_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_marginLeft="80dp"
            android:textColor="@color/white"
            android:text="Иван Иванов"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/when"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_marginLeft="80dp"
            android:textColor="@color/white"
            android:text="Дата"/>

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/date_tv"
            android:minHeight="20dp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:text="Время"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/where"/>

        <TextView
            android:id="@+id/where_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/view_place"
            android:textColor="@color/gold_color" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/where_tv"
            android:layout_marginLeft="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/marker"/>

    </RelativeLayout>

</LinearLayout>