<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dkondratov.opengame.fragments.RegistrationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">
    
    <LinearLayout
        android:id="@+id/reg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="65dp"
            android:textColor="@color/place_param_color"
            android:text="@string/reg_info"/>

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:minHeight="50dp"
            android:textColor="@color/place_param_color"
            android:background="@color/black_transparent"
            android:textSize="14sp"
            android:inputType="textCapSentences"
            android:hint="@string/reg_name"/>

        <EditText
            android:id="@+id/reg_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:textColor="@color/place_param_color"
            android:background="@color/black_transparent"
            android:textSize="14sp"
            android:inputType="textCapSentences"
            android:hint="@string/reg_surname"/>


        <!--
        <EditText
            android:id="@+id/reg_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:textColor="@color/place_param_color"
            android:background="@color/black_transparent"
            android:textSize="14sp"
            android:hint="@string/reg_birthday"/>

        <EditText
            android:id="@+id/reg_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:textColor="@color/place_param_color"
            android:background="@color/black_transparent"
            android:textSize="14sp"
            android:hint="@string/reg_city"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:layout_height="50dp"
            android:prompt="@string/reg_sports"
            style="@style/SpinnerStyle"/>
        -->

        <Button
            android:id="@+id/register_button"
            android:layout_marginTop="10dp"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/save_user_button"
            android:text="@string/register"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:minHeight="65dp"
            android:textColor="@color/place_param_color"
            android:text="@string/reg_social"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/twitter_button"
                android:layout_centerInParent="true"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/tw_1"
                android:background="@drawable/soc_network_button"
                android:scaleType="centerCrop"/>

            <ImageButton
                android:layout_toLeftOf="@+id/twitter_button"
                android:layout_marginRight="30dp"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/fb_1"
                android:id="@+id/fb"
                android:background="@drawable/soc_network_button"
                android:scaleType="centerCrop"/>

            <ImageButton
                android:layout_toRightOf="@+id/twitter_button"
                android:layout_marginLeft="30dp"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/vk_1"
                android:id="@+id/vk"
                android:background="@drawable/soc_network_button"
                android:scaleType="centerCrop"/>

        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
